# free-ralph-context

./: AGENTS.md  CLAUDE.md  CORTEX_AUTO_MODE.md  CORTEX_TEST.md  README.md  TEST_PLAN.md  demo_cortex_auto.sh  demo_predict_mode.sh  demo_super_auto.sh  install.sh  package.json  start.sh  stop.sh  test_ralph_real.py  test_v3_add_memories.py  test_v3_progressive_disclosure.sh
ralph-api/: .env.example  .gitignore  Dockerfile  Makefile  PRD_TEST_SPRINT.md  README.md  TESTING_ROADMAP.txt  TEST_MATRIX.md  TEST_QUICK_REFERENCE.md  TEST_SPRINT_SUMMARY.md  alembic.ini  docker-compose.yml  install-hooks.sh  mcp-config.json  pyproject.toml  requirements.txt  setup-encryption.sh
ralph-api/alembic/: env.py
ralph-api/alembic/versions/: 20260105_0001_initial_schema.py  20260106_0001_add_pgvector_embeddings.py
ralph-api/app/: __init__.py  main.py
ralph-api/app/api/: __init__.py  ai.py  dashboard.py  health.py  memories.py  patterns.py  search.py  sse.py  tools.py
ralph-api/app/core/: __init__.py  config.py  database.py  redis_client.py  security.py
ralph-api/app/models/: __init__.py  checkpoint.py  llm_config.py  (+4 more)
ralph-api/docs/: PRD_TESTS.md
ralph-api/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_compression_service.py  test_fold_service.py  test_session_service.py
ralph-mcp/: MULTI_AGENT.md  README.md  STARTUP.md  install.sh  mcp_server.py  pyproject.toml  pytest.ini
ralph-mcp/core/: __init__.py  logging.py  project.py
ralph-mcp/plugins/: __init__.py  base.py  loader.py
ralph-mcp/src/: __init__.py  cortex.py  llm.py  pattern_extractor.py  project_registry.py  transcript_parser.py
ralph-mcp/tests/: __init__.py  conftest.py  test_all.sh  test_db.py  test_framework_detection.py  test_mcp_handlers.py  test_orchestrate.py  test_pattern_learning.py  test_plugins.py  test_real_scenario.py
(+225 files in other folders)
