[project]
name = "ralph-api"
version = "2.0.0"
description = "AI-powered suggestions API for Ralph MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # File system monitoring (inotify for event-driven updates)
    "watchdog>=5.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    # SSE streaming
    "sse-starlette>=2.0.0",
    # LLM providers (API calls only - NO PyTorch!)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "mistralai>=1.0.0",
    "tiktoken>=0.8.0",
    # MCP server (for health checks)
    "mcp>=0.9.0",
    # Project scanning (lightweight)
    "astroid>=3.3.0",
    "cryptography>=46.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
