[project]
name = "ralph-mcp"
version = "2.0.0"
description = "Ralph MCP Server - Model Context Protocol server for Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
ralph-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
